# vless-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  USAGE.md  build.rs  config-guide.md  config.json
.cargo/: config.toml
.github/workflows/: build.yml
assets/: version.json
docs/: 2026-02-02-监控和性能优化.md  2026-02-03-TLS证书生成和初始化向导优化.md  2026-02-05-外网IP自动获取和VLESS链接生成.md  2026-02-05-性能优化与连接池管理.md  2026-02-06-依赖优化.md  2026-02-06-依赖优化和IP检测增强.md  2026-02-08-前端以及性能优化.md  2026-02-08-流量统计图重构.md  2026-02-09-深度性能优化.md  2026-02-10-移除前端和监控功能精简为纯VLESS服务器.md  2026-02-21-修复WebSocket数据传输问题.md  2026-02-23-WebSocket支持.md  2026-02-25-TUI终端界面.md  2026-03-02-公网IP获取和HTTP_API.md  2026-03-08-systemd服务管理.md  2026-03-09-OpenRC服务管理支持.md  2026-03-17-代码重构和优化.md  2026.02.02-Windows静态编译配置.md  2026.02.02-http监控页面与实时数据推送.md  2026.02.02-流量监控修复与用户统计.md  PRD.md  api.md  architecture.md  spec.md  technology.md  todo.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  App.vue
frontend/src/api/: rest.js  websocket.js  ws-coordinator.js
frontend/src/assets/styles/: main.css
frontend/src/components/: AnimatedNumber.jsx  BackgroundDecoration.jsx  ConnectionPoolCard.vue  ConnectionsCard.vue  DownloadCard.vue  LoadingSkeleton.jsx  MemoryCard.vue  MetricCard.jsx  ResourceCard.jsx  SpeedCard.jsx  SpeedCard.vue  StatCard.vue  SystemInfo.jsx  ThemeToggle.jsx  ThemeToggle.vue  TrafficCard.jsx  TrafficCard.vue  TrafficChart.vue  UptimeCard.jsx  UptimeCard.vue  UserStats.vue  UserTable.jsx  XtlsVisionCard.vue
frontend/src/components/charts/: SpeedChart.jsx  TrafficChartSection.jsx
frontend/src/components/layouts/: DashboardLayout.jsx  Header.jsx  MetricsGrid.jsx
frontend/src/components/metrics/: ConnectionsMetric.jsx  MemoryMetric.jsx  MetricCard.jsx  SpeedMetric.jsx  TrafficMetric.jsx  UptimeMetric.jsx
frontend/src/components/system/: SystemPanel.jsx
frontend/src/components/ui/: badge.jsx  progress.jsx
frontend/src/components/users/: UserStatsSection.jsx  UserTable.jsx
frontend/src/composables/: useTheme.js  useWebSocket.js
frontend/src/store/: monitorStore.js
frontend/src/styles/: index.css  theme.css
frontend/src/utils/: chartHelpers.js  debounce.js  formatters.js
src/: address.rs  api.rs  atomic_write.rs  base64.rs  buffer_pool.rs  config.rs  connection_pool.rs  http.rs  lib.rs  main.rs  memory.rs  protocol.rs  public_ip.rs  server.rs  service.rs  socket.rs  stats.rs  tcp.rs  time.rs  tls.rs  tui.rs  utils.rs  version.rs  vless_link.rs  wizard.rs  ws.rs  xtls.rs
tests/: atomic_write_test.rs  protocol_test.rs  public_ip_test.rs  server_test.rs  tcp_test.rs  vless_link_test.rs  ws_test.rs
