[package]
name = "vless-rust"
version = "0.1.0"
edition = "2021"
default-run = "vless"

[[bin]]
name = "vless"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "io-util", "net", "time", "sync", "macros"] }
mimalloc = { version = "0.1", default-features = false }
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.24"
futures-util = "0.3"
sha1 = "0.10"
rust-embed = { version = "8.0", features = ["include-exclude"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
socket2 = "0.5"
object-pool = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Threading"
]}

# 优化配置
[profile.release]
# 链接时优化
lto = "fat"
# 代码生成单元数量（并行编译）
codegen-units = 16
# 优化级别：3=速度优先
opt-level = 3
# 不包含调试信息
debug = false
# 启用panic=abort减小体积
panic = "abort"