[package]
name = "vless-rust"
version = "1.7.1"
edition = "2021"
default-run = "vless"

[[bin]]
name = "vless"
path = "src/main.rs"


[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "io-util", "net", "time", "sync", "macros", "signal"] }
mimalloc = { version = "0.1", default-features = false }
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.5"
# WebSocket 支持
tokio-tungstenite = "0.21"
futures-util = "0.3"
sha1_smol = "1.0"
base64 = "0.22"
urlencoding = "2.1"
# TUI 支持
ratatui = "0.28"
crossterm = "0.28"
chrono = "0.4"
# HTTP 客户端（用于获取公网 IP）
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# 跨平台获取用户目录
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading"
]}

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 优化配置
[profile.release]
# 链接时优化（thin 比 fat 编译更快，优化效果略低但可接受）
lto = "thin"
# 代码生成单元数量（1 = 最佳优化，但编译较慢）
codegen-units = 1
# 优化级别：3=速度优先
opt-level = 3
# 不包含调试信息
debug = false
# 启用panic=abort减小体积
panic = "abort"
# 剥离符号表减小二进制大小
strip = true
